Fix text alignment

--- a/fractions.css
+++ b/fractions.css
@@ -21,6 +21,27 @@ html, body {
     text-align: center;
 }
 
+.main-screen {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+}
+
+@media screen and (min-width: 545px) {
+    .eq-fract {
+        justify-content: center;
+        -webkit-justify-content: center;
+    }
+}
+
+@media screen and (min-width: 300px) {
+    .no-eq-fract {
+        justify-content: center;
+        -webkit-justify-content: center;
+    }
+}
+
 .content {
     height: 100%;
     width: 100%;
